k8s/41-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beebak-worker
  namespace: beebak
spec:
  replicas: 5
  selector:
    matchLabels:
      app: beebak-worker
  template:
    metadata:
      labels:
        app: beebak-worker
    spec:
      containers:
        - name: worker
          image: beebak/worker:latest
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "750m"
              memory: "768Mi"
