k8s/13-selenium-grid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: beebak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
        - name: hub
          image: selenium/hub:4.27.0
          ports:
            - containerPort: 4442
            - containerPort: 4443
            - containerPort: 4444
          readinessProbe:
            httpGet:
              path: /wd/hub/status
              port: 4444
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: beebak
spec:
  selector:
    app: selenium-hub
  ports:
    - port: 4442
      targetPort: 4442
      name: publish
    - port: 4443
      targetPort: 4443
      name: subscribe
    - port: 4444
      targetPort: 4444
      name: hub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-node
  namespace: beebak
spec:
  replicas: 5
  selector:
    matchLabels:
      app: chrome-node
  template:
    metadata:
      labels:
        app: chrome-node
    spec:
      containers:
        - name: chrome
          image: selenium/node-chrome:4.27.0
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
